--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.526.0",
     "mongoose": "^8.16.4",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "react-icons": "^5.5.0"
   },
   "description": ""
 }
